Updates in Controller
- updates in Controller Produto
- updates in Controller Categoria
- configurações swagger
- configurações api
